test/multilocale/diten/localBlock/needMultiLocales/localBlock8.good
2
First local block
Second local block
localBlock8.chpl:25: error: cannot access remote data in local block
